update UseCasePiTest to check TimingWindow edits, plus editing to remove warnings from static code analysis